--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,7 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
-        with:
-          version: 10
+        # Sem "version" para usar o packageManager do package.json
 
       - uses: actions/setup-node@v4
         with:
@@ -51,8 +50,7 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
-        with:
-          version: 10
+        # Sem "version" para usar o packageManager do package.json
 
       - uses: actions/setup-node@v4
         with:
