--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "^4.0.12",
+    "@vitest/coverage-istanbul": "^4.0.12",
     "eslint": "^9.10.0",
     "typescript": "^5.6.3",
     "vitest": "^4.0.12"
