--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "vite": "^6.0.0",
     "@vitest/coverage-v8": "^4.0.12",
     "@vitest/coverage-istanbul": "^4.0.12",
     "eslint": "^9.10.0",
