--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,8 @@ jobs:
         run: |
           set -e
           pnpm version patch --no-git-tag-version
-          TAG="v$(node -p \"require('./package.json').version\")"
+          VERSION=$(node -p "require('./package.json').version")
+          TAG="v${VERSION}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git commit -am "chore: release ${TAG}" || true
